Second fix to navbar on mobile devices

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -69,7 +69,7 @@ nav.active {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 60vh;
+    /* height: 60vh; */
     position: absolute;
     /* top: 80px; */
     top: -600%;
@@ -89,11 +89,12 @@ nav.active {
     transition: all 0.5s ease-in-out;
     z-index: -1;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
+    padding-top: 15rem;
   }
 
   .nav-item {
     text-align: left;
-    margin-bottom: 3rem;
+    margin-top: 1rem;
   }
 
   .nav-links {
